src/objects/EventLog__c.object
<CustomObject>
    <description>Record errors, events</description>
    <fields>
        <fullName>CSemailFromContract__c</fullName>
        <label>CS Email From Contract</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContractAccountName__c</fullName>
        <formula>Contract__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractAccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractClientServicesRep__c</fullName>
        <formula>Contract__r.ClientServicesRep__r.FirstName &amp;&quot; &quot;&amp;  Contract__r.ClientServicesRep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractClientServicesRep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractID__c</fullName>
        <formula>Contract__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractName__c</fullName>
        <formula>Contract__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>EventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditNote__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Credit Note</label>
        <referenceTo>CreditNote__c</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>EventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <label>Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>Event_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMSpendingDelivery__c</fullName>
        <formula>MMSpending__r.Delivered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MM Spending Delivery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMSpending__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Media Manager Spending</label>
        <referenceTo>MM_Spendings__c</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>EventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMspendingDate__c</fullName>
        <formula>MMSpending__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMspendingDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMspendingSpend__c</fullName>
        <formula>MMSpending__r.Media_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMspendingSpend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMspendingStrikeID__c</fullName>
        <formula>if(!isblank(MMSpending__r.StrikeId__c),MMSpending__r.StrikeId__c, Contract__r.Project_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMspendingStrikeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Sub_Project__c</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>EventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestBody__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestId__c</fullName>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrikeID__c</fullName>
        <formula>Contract__r.Strike_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strike ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Media Manager report</fullName>
                </value>
                <value>
                    <fullName>MM report provided</fullName>
                </value>
                <value>
                    <fullName>MM parsing error</fullName>
                </value>
                <value>
                    <fullName>MM data failure</fullName>
                </value>
                <value>
                    <fullName>Kevin Organization</fullName>
                </value>
                <value>
                    <fullName>Kevin Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>overdue__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Info&apos;), CreatedDate &lt; NOW() - 1, 
CreatedDate &lt; NOW() - 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>overdue</label>
        <type>Checkbox</type>
    </fields>
    <label>Event Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Info__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>Utopsa contract sync started</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Error</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Contract__c</columns>
        <columns>Info__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Error</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Error</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>Contract__c</columns>
        <columns>StrikeID__c</columns>
        <columns>Info__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Error</label>
    </listViews>
    <nameField>
        <displayFormat>EventLog-{0000}</displayFormat>
        <label>Event Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>